; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_cycx_x25.c_cycx_x25_connect_response.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_cycx_x25.c_cycx_x25_connect_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cycx_device = type { i32 }
%struct.cycx_x25_channel = type { i32, i32 }

@X25_CONNECT_RESPONSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cycx_device*, %struct.cycx_x25_channel*)* @cycx_x25_connect_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cycx_x25_connect_response(%struct.cycx_device* %0, %struct.cycx_x25_channel* %1) #0 {
  %3 = alloca %struct.cycx_device*, align 8
  %4 = alloca %struct.cycx_x25_channel*, align 8
  %5 = alloca [8 x i32], align 16
  store %struct.cycx_device* %0, %struct.cycx_device** %3, align 8
  store %struct.cycx_x25_channel* %1, %struct.cycx_x25_channel** %4, align 8
  %6 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 0
  %7 = call i32 @memset(i32* %6, i32 0, i32 32)
  %8 = load %struct.cycx_x25_channel*, %struct.cycx_x25_channel** %4, align 8
  %9 = getelementptr inbounds %struct.cycx_x25_channel, %struct.cycx_x25_channel* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 3
  store i32 %10, i32* %11, align 4
  %12 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 0
  store i32 %10, i32* %12, align 16
  %13 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 2
  store i32 16, i32* %13, align 8
  %14 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 4
  store i32 15, i32* %14, align 16
  %15 = getelementptr inbounds [8 x i32], [8 x i32]* %5, i64 0, i64 7
  store i32 204, i32* %15, align 4
  %16 = load %struct.cycx_device*, %struct.cycx_device** %3, align 8
  %17 = load i32, i32* @X25_CONNECT_RESPONSE, align 4
  %18 = load %struct.cycx_x25_channel*, %struct.cycx_x25_channel** %4, align 8
  %19 = getelementptr inbounds %struct.cycx_x25_channel, %struct.cycx_x25_channel* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = bitcast [8 x i32]* %5 to i32**
  %22 = call i32 @x25_exec(%struct.cycx_device* %16, i32 %17, i32 %20, i32** %21, i32 8, i32* null, i32 0)
  ret i32 %22
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @x25_exec(%struct.cycx_device*, i32, i32, i32**, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
